force-app/main/default/objects/OpportunityReportPreferences__c/OpportunityReportPreferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used by the Opportunity Report VF page</description>
    <label>OpportunityReportPreferences</label>
</CustomObject>