force-app/main/default/objects/OpportunityReportPreferences__c/fields/Ending_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Ending_Quarter__c</fullName>
    <label>Ending Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>