force-app/main/default/objects/OpportunityReportPreferences__c/fields/FilterId__c.field-meta.xml
<CustomField>
    <fullName>FilterId__c</fullName>
    <description>Most recently used List View Filter Id</description>
    <label>FilterId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>