force-app/main/default/objects/OpportunityReportPreferences__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <defaultValue>&quot;browser&quot;</defaultValue>
    <description>Preferred output format: browser or csv</description>
    <label>Format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>