force-app/main/default/objects/OpportunityReportPreferences__c/fields/Show_Repeated_Data__c.field-meta.xml
<CustomField>
    <fullName>Show_Repeated_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Repeated Data</label>
    <type>Checkbox</type>
</CustomField>