force-app/main/default/objects/OpportunityReportPreferences__c/fields/Starting_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Starting_Quarter__c</fullName>
    <description>Starting quarter for the report</description>
    <label>Starting Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>